--- a/src/scss/views/_album.scss
+++ b/src/scss/views/_album.scss
@@ -1,6 +1,5 @@
 
 .album-view {
-
 	.title {
 		padding: 30px 40px;
 
@@ -21,9 +20,34 @@
 		@include clearfix();
 	}
 
+	.description {
+		padding-bottom: 5px;
+	}
+
 	.thumbnail {
 		float: left;
 		max-width: 230px;
 		margin: 0 30px 30px 0;
+	}
+
+	@include responsive( $bp_medium ){
+		.title {
+			padding: 20px 20px;
+		}
+
+		.thumbnail {
+			float: none;
+			max-width: none;
+			margin: 0 0 0 0;
+
+			.image {
+				padding-bottom: 70%;
+			}
+		}
+
+		.actions {
+			text-align: center;
+			padding-bottom: 20px;
+		}
 	}
 }
